--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
   <title>Google</title>
 </head>
 <body>
-<img src="./Google.png" alt="Google">
+
+<img src="./Google.png" alt="Google" class="center">
 </body>
 </html>
