--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 <body>
 
 <img src="./Google.png" alt="Google" class="center">
+
+  <div>
+    <form>
+      <input type"text" name="search" method="GET" placeholder="Search...">
+    </form>
+  </div>
 </body>
 </html>
