--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="main.css">
   <title>Google</title>
 </head>
 <body>
 
+  <div id="main">
+    <div id="nav-top">
+      <div id="gmail">
+        Gmail
+      </div>
+      <div id="images">
+        Images
+      </div>
+    </div>
+  </div>
+
 <img src="./Google.png" alt="Google" class="center">
 
-  <div>
+  <div class="search center">
     <form>
       <input type"text" name="search" method="GET" placeholder="Search...">
     </form>
