--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <div id="main">
+  <div id="header">
     <div id="nav-top">
       <div id="gmail">
         Gmail
@@ -17,12 +17,24 @@
     </div>
   </div>
 
-<img src="./Google.png" alt="Google" class="center">
+
+
+<img src="./Google.png" alt="Google" class="logo">
 
   <div class="search center">
     <form>
-      <input type"text" name="search" method="GET" placeholder="Search...">
+      <input type"text" name="search" method="GET" placeholder="Search..." class="searchBar">
     </form>
   </div>
+
+  <div class="buttons">
+    <button>Google Search</button>
+
+    <button>I'm feeling lucky</button>
+  </div>
+  <footer>
+
+
+  </footer>
 </body>
 </html>
