--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="main.css">
+<link rel="icon" href="miniLogo.png">
   <title>Google</title>
 </head>
 <body>
@@ -13,6 +14,9 @@
       </div>
       <div id="images">
         Images
+      </div>
+      <div>
+        <img src="./appLogo.jpg" id="appLogo">
       </div>
     </div>
   </div>
