--- a/index.html
+++ b/index.html
@@ -16,18 +16,25 @@
         Images
       </div>
       <div>
-        <img src="./appLogo.jpg" id="appLogo">
+        <img src="./images/appLogo.jpg" id="appLogo">
+      </div>
+      <div>
+        <img src="./images/notificationsLogo.png" id="notificationsLogo">
+      </div>
+      <div>
+        <img src="./images/accountLogo.png" id="accountLogo">
       </div>
     </div>
   </div>
 
 
 
-<img src="./Google.png" alt="Google" class="logo">
+<img src="./images/Google.png" alt="Google" class="googleLogo">
 
   <div class="search center">
     <form>
-      <input type"text" name="search" method="GET" placeholder="Search..." class="searchBar">
+      <input type"text" name="search" method="GET" class="searchBar">
+      <img src="./images/voiceLogo.png" id="voiceLogo">
     </form>
   </div>
 
@@ -37,7 +44,9 @@
     <button>I'm feeling lucky</button>
   </div>
   <footer>
-
+    <div>
+      hello
+    </div>
 
   </footer>
 </body>
