--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
     <button>I'm feeling lucky</button>
   </div>
   <footer>
-    <div>
-      hello
+    <div id="footerDiv">
+      Australia
     </div>
+  <div id="footerLeft">
+    <li>Advertising</li>
+    <li>Business</li>
+    <li>About</li>
+  </div>
+
+  <div id="footerRight">
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>Settings</li>
+  </div>
 
   </footer>
 </body>
